--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -142,28 +142,34 @@
     "mHx=(c0*dt)/UR\n",
     "\n",
     "Ey=zeros(Nz)\n",
+    "Ey[int(Nz/2)]=1\n",
+    "\n",
     "Hx=zeros(Nz)\n",
+    "Hx[int(Nz/2)-1]=2\n",
     "\n",
     "boxes=[]\n",
-    "for i in range(0,len(boxes)-1):\n",
-    "    boxes[i]=box(pos=vector(-Nz/2.0+i,0,0), length=1, height=1, width=1)\n",
+    "for i in range(0,Nz):\n",
+    "    boxes.append(box(pos=vector(-Nz/2.0+i,0,0), length=1, height=10, width=1))\n",
     "\n",
     "\n",
     "for t in range(step):\n",
+    "    #print(t)\n",
+    "    rate(10)\n",
     "    for nz in range(1,Nz-1):\n",
     "        Hx[nz-1]=Hx[nz-1]+mHx[nz-1]*(Ey[nz]-Ey[nz-1])/dz\n",
     "    Hx[Nz-1]=Hx[Nz-1]+mHx[Nz-1]*(0-Ey[Nz-1])/dz\n",
     "      \n",
     "    Ey[0]=Ey[0]+mEy[0]*(Hx[0]-0)/dz\n",
     "    for nz in range(2,Nz):\n",
-    "        Ey[nz-1]=Ey[nz-1]+mEy[nz-1]*(Hx[nz-1]-Hx[nz-1])/dz\n",
+    "        Ey[nz-1]=Ey[nz-1]+mEy[nz-1]*(Hx[nz-1]-Hx[nz-2])/dz\n",
     "          \n",
-    "    for i in range(0, len(boxes)-1):\n",
-    "        boxes[i].color=vector(Ey[i],0,0)\n"
+    "    for i in range(0, Nz):\n",
+    "        boxes[i].color=vector(Ey[i],Hx[i],0.0)\n"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
