visual test done, calculation problems unfixed

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -149,7 +150,7 @@
     "\n",
     "boxes=[]\n",
     "for i in range(0,Nz):\n",
-    "    boxes.append(box(pos=vector(-Nz/2.0+i,0,0), length=1, height=10, width=1))\n",
+    "    boxes.append(box(pos=vector(-Nz/2.0+i,0,0), length=1, height=100, width=1))\n",
     "\n",
     "\n",
     "for t in range(step):\n",
